--- a/src/app/components/beneficios/beneficios.component.html
+++ b/src/app/components/beneficios/beneficios.component.html
@@ -6,13 +6,13 @@
             </h2>
         
             <h1>
-                Usa tu cuenta GO BICE para<br> todo lo que necesitas
+                Realiza tus compras y <br> suscripciones sin comisión
             </h1>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12">
+        <!-- <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12">
             <div class="col-12">
                 <div class="row tarjeta">
                     <div class="col-4 col-lg-4 col-xl-4 col-md-4 col-sm-4">
@@ -44,14 +44,14 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
 
-        <div class="col-12 col-lg-8 col-xl-8 col-md-8 col-sm-12">
-            <div class="text-center" style="margin-bottom: 40px;">
+        <div class="col-12 col-lg-12 col-xl-12 col-md-12 col-sm-12 px-5" >
+            <!--<div class="text-center" style="margin-bottom: 40px;">
                 <p class="title">Realiza tus compras y suscripciones sin comisión</p> 
-            </div>
+            </div>-->
 
-            <div class="row text-center">
+            <div class="row text-center" style="padding: 0px 5%;">
                 <div class="col-6 col-lg-4 col-xl-4 col-md-6 col-sm-6 marcas">
                     <img style="width: 88px;" src="assets/img/bene1.jpg">
                     <p class="txtBeneficios">Uber, Cabiby, Didi</p>
@@ -67,12 +67,12 @@
                     <p class="txtBeneficios">Netflix, HBO Go, Amazon Prime</p>
                 </div>
         
-                <div class="col-6 col-lg-6 col-xl-6 col-md-6 col-sm-6 marcas">
+                <div class="offset-2 col-6 col-lg-4 col-xl-4 col-md-6 col-sm-6 marcas text-center">
                     <img style="width: 88px;" src="assets/img/bene4.jpg">
                     <p class="txtBeneficios">Spotify, Apple Music</p>
                 </div>
         
-                <div class="col-12 col-lg-6 col-xl-6 col-md-12 col-sm-12 marcas">
+                <div class="col-12 col-lg-4 col-xl-4 col-md-12 col-sm-12 marcas text-center">
                     <img style="width: 88px;" src="assets/img/bene5.jpg">
                     <p class="txtBeneficios">Amazon, Aliexpress, Ebay</p>
                 </div>
