--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,17 +1,17 @@
 <div>
     <div class="row text-center" style="margin: 40px 20% 0 20%;">
-        <div class="d-none d-lg-block col-3">
-            <a class="opciones" href="#beneficios">Beneficios</a>
+        <div class="d-none d-lg-block col-4">
+            <a class="opciones" (click)="scroll('beneficios')" >Beneficios</a>
         </div>
-        <div class="d-none d-lg-block col-3">
-            <a class="opciones" href="#tarifas">Tarifas</a>
+        <div class="d-none d-lg-block col-4">
+            <a class="opciones" (click)="scroll('tarifas')">Tarifas</a>
         </div>
-        <div class="d-none d-lg-block col-3">
-            <a class="opciones" href="#preguntasFrecuentes">Preguntas frecuentes</a>
+        <div class="d-none d-lg-block col-4">
+            <a class="opciones" (click)="scroll('preguntasFrecuentes')">Preguntas frecuentes</a>
         </div>
-        <div class="d-none d-lg-block col-3">
+        <!--<div class="d-none d-lg-block col-3">
             <a class="opciones" href="assets/docs/Terminos_y_Condiciones.pdf" target="_blank">Términos y condiciones</a>
-        </div>
+        </div>-->
         <div class="col-12" style="margin: 30px 0 40px 0;">
             <p class="copyright">Copyright 2020 GO BICE. Una iniciativa de  <img style="height: 20px; margin-left: 2px;" src="assets/img/Logo.png"></p>
         </div>
