--- a/src/app/components/hazte-cliente/hazte-cliente.component.less
+++ b/src/app/components/hazte-cliente/hazte-cliente.component.less
@@ -4,7 +4,7 @@
     background-image: url("../../../assets/img/header_2.png");
     background-size: 100% 100%;
     background-repeat: no-repeat;
-   
+    padding-bottom: 87px;
     
   }
 
@@ -14,25 +14,22 @@
 }
 
 .titulo{
-    font-style: normal;
-    font-weight: 600;
-    //font-size: 48px;
-    //line-height: 56px;
-    font-size: 33px;
-    line-height: 37px;
     color: #FFFFFF;
     padding-top: 100px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 48px;
+    line-height: 56px;
 }
 
 .subTitulo{
-    font-style: normal;
-    font-weight: 600;
-    //font-size: 48px;
-    //line-height: 56px;
-    font-size: 13px;
-    line-height: 30px;
-    color: #FFFFFF;
-    padding-top: 20px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
+  color: #FFFFFF;
 }
 
 
@@ -57,7 +54,9 @@
     
     
   }
-
+  label{
+    color:white;
+  }
   .imagen{
     padding-top: 50px;
 
@@ -73,7 +72,7 @@
   @media (max-width: 575px) {
     .cliente-container{
         background-image: url("../../../assets/img/header_2_mobile.png");
-        background-size: 100% 65%;
+        background-size: 100% 90%;
         padding-bottom: 87px;
     }
     .row{
