--- a/src/app/components/header/header.component.less
+++ b/src/app/components/header/header.component.less
@@ -2,7 +2,15 @@
     margin-left: 10% !important;
     margin-right: 10% !important;
 }
-
+.nav-item{
+    color: #1976D2!important;
+}
 .bg-light {
     background-color: #fff!important;
+}
+
+@media (max-width: 575px) {
+    header{
+        margin: 0px 0% 0px 10%!important;
+    }
 }
