--- a/src/app/components/preguntas-frecuentes/preguntas-frecuentes.component.html
+++ b/src/app/components/preguntas-frecuentes/preguntas-frecuentes.component.html
@@ -8,10 +8,9 @@
 
         <div class="row justify-content-center mt-5">
 
-            <div class="col-md-6 d-none d-sm-none d-md-flex nopadding">
-                <!--<img src=" assets/img/brand.png " style="position: absolute; width: 632px;height: 601px; " />-->
+            <!--<div class="col-md-6 d-none d-sm-none d-md-flex nopadding">
                 <img src=" assets/img/brand.png " style="max-width: 100%;" />
-            </div>
+            </div>-->
 
             <div class="col-md-6">
                 <mat-accordion [multi]="false">
@@ -23,7 +22,7 @@
                         </mat-expansion-panel-header>
 
                         <p class="sub-title">
-                            La cuenta Go BICE es una cuenta vista con tarjeta de débito, que puede recibir abonos y transferencias desde cualquier banco, con la cual se puede girar y comprar en Chile y en el exterior, además de transferir en forma electrónica.
+                            Es la primera cuenta vista del Bancoo BICE, que te permite comprar donde quieras, tanto en internet como en comercios físicos, retirar plata en cajeros automáticos y transferir a quién quieras.
                         </p>
                     </mat-expansion-panel>
 
@@ -71,12 +70,23 @@
                         </p>
                     </mat-expansion-panel>
 
+                    <mat-expansion-panel>
+                        <mat-expansion-panel-header>
+                            <mat-panel-title class="title">
+                                ¿Cómo la uso?
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+                        <p class="sub-title">
+                            Por definir.
+                        </p>
+                    </mat-expansion-panel>
+
                 </mat-accordion>
             </div>
 
-            <div class="col-md-6 d-block d-sm-block d-md-none">
+            <!--<div class="col-md-6 d-block d-sm-block d-md-none">
                 <img src=" assets/img/brand.png " style="width: 100%;" />
-            </div>
+            </div>-->
 
         </div>
 
