--- a/src/app/components/tarifas/tarifas.component.html
+++ b/src/app/components/tarifas/tarifas.component.html
@@ -10,7 +10,7 @@
             </h1>
         
             <h3>
-                No tenemos planes, el trato es el mismo para todos. 
+                No tenemos “letra chica”, no te encontrarás con sorpresas.
             </h3>
         </div>
     </div>
@@ -31,13 +31,13 @@
         <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12">
             <img src="assets/img/giros.png" class="giros-compras">
             <p class="title">2 giros gratis al mes</p>
-            <p class="sub-title">Al tercer giro te cobraremos 500 pesos</p>
+            <p class="sub-title">Al tercer giro te cobraremos $500 pesos</p>
         </div>
 
         <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12">
             <img src="assets/img/transferencias.png">
             <p class="title">Transfiere sin costo</p>
-            <p class="sub-title">Todas tus transferencias en Chile son gratis, no importa el banco</p>
+            <p class="sub-title">Todas tus transferencias en Chile son gratis, no importa el banco de destino</p>
         </div>
 
         <div class="col-12 col-lg-4 col-xl-4 col-md-4 col-sm-12">
