--- a/src/app/components/tarifas/tarifas.component.less
+++ b/src/app/components/tarifas/tarifas.component.less
@@ -10,10 +10,12 @@ img{
 
 .title{
     font-style: normal;
-    font-weight: bold;
+    font-weight: bold!important;
     font-size: 21px;
     line-height: 31px;
-    color: #2C2E30;
+    text-align: center;
+    
+    color: #2C2E30!important;
 }
 
 .sub-title{
@@ -33,7 +35,7 @@ h2{
     font-weight: bold;
     font-size: 16px;
     line-height: 24px;
-    color: #7E8085;
+    color: #008A9F;
 }
 
 h3{
