--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
+
 <app-header></app-header>
 <app-hazte-cliente id="cliente"></app-hazte-cliente>
 <app-beneficios id="beneficios"></app-beneficios>
+<app-usa-cuenta></app-usa-cuenta>
 <app-tarifas id="tarifas"></app-tarifas>
+
 <app-preguntas-frecuentes id="preguntas_frecuentes"></app-preguntas-frecuentes>
-<app-crea-cuenta id="creaCliente"></app-crea-cuenta>
+<!--<app-crea-cuenta id="creaCliente"></app-crea-cuenta>-->
+
 <app-footer></app-footer>
