--- a/src/app/components/beneficios/beneficios.component.less
+++ b/src/app/components/beneficios/beneficios.component.less
@@ -38,7 +38,7 @@ h2{
     font-weight: bold;
     font-size: 16px;
     line-height: 24px;
-    color: #7E8085;
+    color: #008A9F;
 }
 
 h3{
@@ -61,7 +61,7 @@ h1{
     margin-bottom: 30px;
 }
 .marcas{
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 
 
@@ -79,7 +79,9 @@ h1{
     color: #2F3841;
 }
 
-
+p{
+    margin-top: 16px!important;
+}
 
 
 @media (min-width: 576px) {
