--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,20 +9,20 @@
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             </ul>
             <div class="form-inline my-2 my-lg-0">
-                <a class="nav-item nav-link active" href="#beneficios">Beneficios <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="javascript:void(0);" (click)="scroll('beneficios')">Beneficios <span class="sr-only">(current)</span></a>
             </div>
             <div class="form-inline my-2 my-lg-0">
-                <a class="nav-item nav-link" href="#tarifas">Tarifas</a>
+                <a class="nav-item nav-link" href="javascript:void(0);" (click)="scroll('tarifas')">Tarifas</a>
             </div>
             <div class="form-inline my-2 my-lg-0">
-                <a class="nav-item nav-link" href="#preguntasFrecuentes">Preguntas frecuentes</a>
+                <a class="nav-item nav-link" href="javascript:void(0);" (click)="scroll('preguntasFrecuentes')">Preguntas frecuentes</a>
             </div>
-            <div class="form-inline my-2 my-lg-0 d-block d-sm-none">
+            <!--<div class="form-inline my-2 my-lg-0 d-block d-sm-none">
                 <a class="nav-item nav-link" href="assets/docs/Terminos_y_Condiciones.pdf"  target="_blank">Términos y condiciones</a>
-            </div>
-            <div *ngIf="!enviroment" class="form-inline my-2 my-lg-0">
+            </div>-->
+            <!--<div *ngIf="!enviroment" class="form-inline my-2 my-lg-0">
                 <a  class="btn btn-primary" href="{{url}}" style="background-color: #1976D2;" style="text-decoration: none;">Hazte cliente</a>
-            </div>
+            </div>-->
         </div>
     </nav>
 </header>
