--- a/src/styles.less
+++ b/src/styles.less
@@ -159,3 +159,331 @@ html {
   }
 }
 
+
+
+/*
+
+
+
+----------------------------------------------------------------------------------------------------------------------
+*/
+body {
+  font-family: 'Poppins';
+  font-size: 16px;
+  line-height: 24px;
+  color: #2F3841;
+}
+
+h1 {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 56px;
+  color: #1976D2;
+}
+
+h2 {
+  color: #2C2E30;
+  font-size: 34px;
+  text-align: center;
+  line-height: 46px;
+}
+
+h3 {
+  color: #008A9F;
+  font-size: 16px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+h4 {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.logo {
+  width: 104px;
+  height: 62.4px; 
+}
+
+#hero-section {
+  margin-top: 50px;
+}
+
+
+#hero-section .container img {
+  max-height: 670px;
+}
+
+#hero-section h2 {
+  text-align: left;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
+}
+
+.button-hero {
+  color: #FFF;
+  background-color: #1976D2;
+  border-radius: 8px;
+  padding: 8px 48px;
+}
+
+
+.card {
+  border: none;
+  text-align: center;
+  margin-top: 84px;
+  border-radius: 8px!important;
+}
+
+.card-image img {
+  max-width: 88px;
+}
+
+.card-content {
+  margin-top: 16px;
+}
+
+#beneficios {
+  padding: 100px 0 0 0;
+}
+
+#usa-tu-cuenta {
+  background: linear-gradient(180deg, #FFFFFF 0%, #E4F1FE 73.2%);
+  padding-top: 110px;
+  margin-top: 30px;
+}
+
+#usa-tu-cuenta h2 {
+  font-size: 32px;
+  line-height: 40px;
+  color: #333840;
+  font-weight: bold;
+}
+
+#usa-tu-cuenta .container {
+  background-image: url("https://image.info.bice.cl/lib/fe8e13727c660d7c76/m/5/54a7349b-d2d5-4448-bc96-42391fdd4882.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  padding-top: 40px;
+  padding-bottom: 28px;
+}
+
+.container{
+width:100%;
+}
+
+
+.card.horizontal {
+  margin-top: 24px;
+  padding: 24px 24px 0 24px;
+  text-align: left;
+}
+
+.card.horizontal img {
+  float: left;
+  margin-bottom: 30px;
+  width: 24px;
+}
+
+.card-horizontal p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+  color: #58606E;
+}
+
+.card.horizontal dt {
+  float: left;
+  width: 24px;
+}
+
+
+.card.horizontal dd {
+  float: right;
+  /* margin-left: 24px; */
+  width: calc(100% - 46px);
+}
+
+.card.horizontal dd p {
+  margin-bottom: 0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+}
+
+#tarifas {
+  padding-top: 95px;
+  padding-bottom: 144px;
+  background: #F2F2F2;
+}
+
+#tarifas .card {
+  background-color: transparent
+}
+
+#tarifas h4 {
+  font-weight: bold;
+  font-size: 21px;
+  line-height: 31px;
+  color: #2C2E30;
+}
+
+#tarifas p {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 28px;
+  color: #7E8085;
+}
+
+#faq {
+  padding: 100px 0;
+}
+
+#faq .card {
+  margin-top: 0;
+}
+
+#accordion {
+  margin-top: 77px
+}
+
+#accordion .card {
+  text-align: left;
+}
+
+#accordion .card-header {
+  background-color: transparent;
+  border-color: transparent;
+}
+
+#accordion .card-header h5 .btn-link {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 32px;
+  color: #2C2E30;
+}
+
+#inscribete {
+  padding-top: 50px;
+  padding-left:0px;
+  padding-right:0px;
+
+  background-image: linear-gradient(to right, #00395D, #0293CF);
+}
+
+#inscribete h2 {
+  color: #FFFFFF;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 980px) {
+  #usa-tu-cuenta .container {
+      padding-bottom: 450px;
+  }
+}
+
+
+@media (min-width:979px) {
+  #beneficios .offset-3 {
+      margin-left: 0;
+  }
+}
+
+@media (max-width:980px) {
+  #beneficios .offset-2 {
+      margin-left: 0;
+  }
+
+  #usa-tu-cuenta .offset-4 {
+      margin-left: 0;
+  }
+
+  #usa-tu-cuenta {
+      padding-top: 56px;
+  }
+
+  h1 {
+      font-size: 40px;
+      line-height: 48px;
+  }
+
+  #hero-section .margin-top {
+      margin-top: 60px;
+  }
+
+  #hero-section .margin-top img {
+      max-width: 70%;
+  }
+
+
+}
+
+@media (max-width:767px) {
+  #beneficios .offset-3 {
+      margin-left: 0;
+  }
+
+  #usa-tu-cuenta .container {
+      padding-bottom: 400px;
+  }
+
+}
+
+@media (max-width:575px) {
+
+  #hero-section h1,
+  #hero-section h2,
+  #hero-section .button-hero {
+      text-align: left;
+  }
+input{
+  font-size:10px;
+}
+}
+
+/*Form*/
+
+.sc-formfield-input {
+  border: none;
+  border-radius: 8px;
+  background-color: #1976D2;
+  opacity: 0.95;
+  height: 40px;
+  width: 100%;
+}
+
+input {
+  width: 100%;
+  border: none;
+  border-radius: 8px;
+  opacity: 1;
+  height: 40px !important;
+
+}
+
+
+#smartcapture-block-hhrnypep6bt .sc-button {
+  margin-top: 10px;
+  width: 100%;
+  border-radius: 8px !important;
+  height: 40px !important;
+  background-color: #FFFFFF !important;
+  border: 0px;
+}
+
+.smartcapture-submit-button-wrapper {
+  margin-top: 20px
+}
+
+.sc-button {
+  border:2px solid #1976D2 !important;
+
+}
