--- a/src/app/components/hazte-cliente/hazte-cliente.component.html
+++ b/src/app/components/hazte-cliente/hazte-cliente.component.html
@@ -20,12 +20,12 @@
                     -->
                     <div>
                         <label for="rut">Rut</label>
-                        <input type="text" name="rut" data-field-type="Text" required="required" data-validation-message="Ingrese un rut." style="margin-bottom:10px;">
+                        <input type="text" name="rut" data-field-type="Text" required="required" data-validation-message="Ingrese un rut." placeholder="19.243.456-2" style="margin-bottom:10px;">
                     </div>
 
                     <div>
                         <label for="rut">Email</label>
-                        <input type="text" name="email" data-field-type="Text" required="required" data-validation-message="Ingrese un email."style="margin-bottom:10px;">
+                        <input type="text" name="email" data-field-type="Text" required="required" data-validation-message="Ingrese un email." placeholder="ejemplo@ejemplo.cl" style="margin-bottom:10px;">
                     </div>
 
                     <div>
