--- a/src/app/components/hazte-cliente/hazte-cliente.component.less
+++ b/src/app/components/hazte-cliente/hazte-cliente.component.less
@@ -7,6 +7,49 @@
     padding-bottom: 87px;
     
   }
+input{
+  outline: none;
+  background: #FFFFFF;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.0207484);
+  border-radius: 5px;
+  padding: 0px 20px;
+}
+
+::-webkit-input-placeholder { /* Edge */
+  font-family: Poppins;
+font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 24px;
+/* identical to box height */
+
+
+color: #AFB2B9;
+}
+
+:-ms-input-placeholder {
+  font-family: Poppins;
+font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 24px;
+/* identical to box height */
+
+
+color: #AFB2B9;
+}
+input::placeholder{
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height */
+  
+  
+  color: #AFB2B9;
+}
+
 
 .texto{
     //display: flex;
